<resources>
    <string name="app_name">StitchingApp</string>

    <string name="sign_in">
        Sign in
    </string>

    <string name="welcome_to_">
        Welcome to you!
    </string>
    <string name="forget_pass">
        Forget password ?
    </string>
    <string name="create_anot">
            Create another account
        </string>
    <string name="don_t_have_">
            Don\'t have an account ?
        </string>
    <string name="don_t_have_1">
            SIGN UP
        </string>
    <string name="forgot_pass">
            Forgot password
        </string>
    <string name="you_ve_got_">
            You\'ve Got Otp
        </string>
    <string name="we_will_sen">
            We will send you the verification code to your phone number, check your massage and put the code right below .
        </string>
    <string name="enter_your_">
            Enter Your 4 Digit Code
        </string>
    <string name="didn_t_rece">
            Didn\'t receive the otp?
        </string>

    <string name="sign_up">
            Sign up
        </string>
    <string name="welcome_to_1">
            Welcome to your own sewing world..!
        </string>
    <string name="or_sign_up_">
            or sign up with
        </string>
    <string name="Home">Home</string>
    <string name="Saved">Saved</string>
    <string name="Profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="special_for">
        Special for you
    </string>
    <string name="our_collect">
        Our Collection
    </string>
    <string name="hello_yesha">
            Hello,
        </string>
    <string name="hello_yesha1">

        </string>
    <string name="one_piece">
        one piece
    </string>
    <string name="choose_styl">
        Choose styles
    </string>
    <string name="barbie_frock">barbie frock</string>
    <string name="baby_skirt">baby skirt</string>
    <string name="shorty">Shorty</string>
    <string name="plaza">Plaza</string>
    <string name="top">Top</string>
    <string name="edit_profil">
        Edit Profile
    </string>
    <string name="account">
            Account
        </string>
    <string name="notification">Notification</string>
    <string name="your_favorite">Your Saved</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="change_picture">Change Picture</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="profile">
        Profile
    </string>
    <string name="edit_profil1">
                Edit Profile
            </string>
    <string name="edit_profile2">Edit Profile</string>
</resources>