<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Person_Activity.EditProfile_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <View
                android:id="@+id/group_607"
                android:layout_width="597.87dp"
                android:layout_height="460.77dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="-134.87dp"
                android:layout_marginTop="-120.81dp"
                android:background="@drawable/image6" />

            <View
                android:id="@+id/back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="78dp"
                android:background="@drawable/baseline_arrow_back_ios_24" />

            <TextView
                android:id="@+id/edit_profil"
                android:layout_width="125dp"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="66dp"
                android:layout_marginTop="72dp"
                android:gravity="top"
                android:text="@string/edit_profil1"
                android:textAppearance="@style/edit_profil1" />


            <View
                android:id="@+id/rectangle_1"
                android:layout_width="367dp"
                android:layout_height="459dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="201dp"
                android:background="@drawable/rectangle_2" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ellipse_20"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="134dp"
                android:layout_marginTop="128dp"
                android:src="@drawable/edite"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CircularImageView" />


            <TextView
                android:id="@+id/change_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="145dp"
                android:layout_marginTop="261dp"
                android:gravity="top"
                android:text="@string/change_picture"
                android:textAppearance="@style/edit_profil" />

            <EditText
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="325dp"
                android:backgroundTint="@color/black"
                android:ems="13"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />


            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="45dp"
                android:backgroundTint="@color/black"
                android:ems="13"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextEmailAddress"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="45dp"
                android:backgroundTint="@color/black"
                android:ems="13"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextNumber"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="45dp"
                android:backgroundTint="@color/black"
                android:ems="13"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <Button
                android:id="@+id/button2"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="752dp"
                android:backgroundTint="@color/black"
                android:text="Save"
                android:textColor="@color/white" />


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>