<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Person_Fragment">

    <View
        android:id="@+id/group_607"
        android:layout_width="597.87dp"
        android:layout_height="460.77dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="-134.87dp"
        android:layout_marginTop="-120.81dp"
        android:background="@drawable/image6" />


    <View
        android:id="@+id/rectangle_1"
        android:layout_width="367dp"
        android:layout_height="459dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="201dp"
        android:background="@drawable/rectangle_2" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ellipse_20"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="134dp"
        android:layout_marginTop="128dp"
        android:src="@drawable/edite"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CircularImageView" />


    <TextView
        android:id="@+id/edit_profil"
        android:layout_width="84dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="261dp"
        android:gravity="top"
        android:text="@string/edit_profil"
        android:textAppearance="@style/edit_profil" />


    <LinearLayout
        android:id="@+id/edit"
        android:layout_width="318dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40.5dp"
        android:layout_marginTop="323dp">

        <View
            android:layout_width="29.78dp"
            android:layout_height="28.5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/account" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:gravity="top"
            android:text="@string/edit_profile2"
            android:textAppearance="@style/account" />

        <View
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="20dp"
            android:alpha="0.65"
            android:background="@drawable/baseline_arrow_forward_ios_24" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="318dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40.5dp"
        android:layout_marginTop="388dp">

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/notification" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:gravity="top"
            android:text="@string/notification"
            android:textAppearance="@style/account" />

        <View
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="20dp"
            android:alpha="0.65"
            android:background="@drawable/baseline_arrow_forward_ios_24" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/your_favorite"
        android:layout_width="318dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40.5dp"
        android:layout_marginTop="453dp">

        <View
            android:layout_width="29.78dp"
            android:layout_height="28.5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/like" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:gravity="top"
            android:text="@string/your_favorite"
            android:textAppearance="@style/account" />

        <View
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="20dp"
            android:alpha="0.65"
            android:background="@drawable/baseline_arrow_forward_ios_24" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="318dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40.5dp"
        android:layout_marginTop="518dp">

        <View
            android:layout_width="29.78dp"
            android:layout_height="28.5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/settings" />

        <TextView
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:gravity="top"
            android:text="@string/settings"
            android:textAppearance="@style/account" />

        <View
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="136dp"
            android:layout_marginTop="20dp"
            android:alpha="0.65"
            android:background="@drawable/baseline_arrow_forward_ios_24" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="318dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40.5dp"
        android:layout_marginTop="580dp">

        <View
            android:layout_width="29.78dp"
            android:layout_height="28.5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/logout" />

        <TextView
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:gravity="top"
            android:text="@string/log_out"
            android:textAppearance="@style/account" />

        <View
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="136dp"
            android:layout_marginTop="20dp"
            android:alpha="0.65"
            android:background="@drawable/baseline_arrow_forward_ios_24" />


    </LinearLayout>


</FrameLayout>