<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/group2"
    tools:context=".LoginActivity.VerifyOtp_Activity">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="256dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="71dp"
            android:gravity="top"
            android:text="@string/forgot_pass"
            android:textAppearance="@style/forgot_pass" />

        <TextView
            android:id="@+id/you_ve_got_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_pass"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="-8sp"
            android:text="@string/you_ve_got_"
            android:textAppearance="@style/you_ve_got_" />

        <TextView
            android:id="@+id/we_will_sen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="230dp"
            android:layout_marginRight="25dp"
            android:gravity="top"
            android:text="@string/we_will_sen"
            android:textAppearance="@style/we_will_sen" />

        <TextView
            android:id="@+id/we_have_sen"
            android:layout_width="251dp"
            android:layout_height="30dp"
            android:layout_below="@+id/we_will_sen"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="7sp"
            android:text=""
            android:textAppearance="@style/we_will_sen"
            android:translationY="-3.32sp" />


        <TextView
            android:id="@+id/enter_your_"
            android:layout_width="228dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="576dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="6sp"
            android:text="@string/enter_your_"
            android:textAppearance="@style/enter_your_"
            android:translationY="-2.9sp" />

        <EditText
            android:id="@+id/line_1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="92dp"
            android:layout_marginTop="630dp"
            android:background="@drawable/box"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/line_2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="128dp"
            android:layout_marginTop="630dp"
            android:background="@drawable/box"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/white" />


        <EditText
            android:id="@+id/line_3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="164dp"
            android:layout_marginTop="630dp"
            android:background="@drawable/box"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/line_4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="630dp"
            android:background="@drawable/box"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/line_5"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="236dp"
            android:layout_marginTop="630dp"
            android:background="@drawable/box"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/line_6"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="272dp"
            android:layout_marginTop="630dp"
            android:background="@drawable/box"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_4"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white"
            android:text="SUBMIT"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/didn_t_rece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="777dp"
            android:gravity="center_horizontal|top"
            android:text="@string/didn_t_rece"
            android:textAppearance="@style/didn_t_rece" />


    </RelativeLayout>
</ScrollView>